# dcomex-tools

./: .gitignore  README.md  build.sh  setup.cfg
dcomex/: arg_parser.py  gui.py  initialize.py  main.py  misc.py  plugin.py  process.py  script.py
dcomex/lib/: data.py  datadialog.py  inputdialog.py  mainwindow.py  misc.py  plugin.py  plugin_manager.py  plugindialog.py  qtdata.py  qtplugin.py  utils.py  viewer.py  viewer3d.py  worker.py  workspace.py
