[metadata]
name = dcomex-tools
version = 0.0.1
author = Giles Tetteh
author_email = giles.tetteh@tum.de
description = Python Tools for the DCoMEX project
url = https://github.com/giesekow/dcomex-tools.git
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
keywords =
  dcomex
  image processing
  meshing
  vtk
  itk

[options]
packages = dcomex
install_requires =
  pyqt5
  numpy
  nibabel
  simpleitk
  scipy
  matplotlib
  vtk
  tinydb
  pyqtgraph
  numpy-stl
  pyopengl
  PyYAML
  gitpython

[options.entry_points]
console_scripts =
  dcomex = dcomex:main

[options.package_data]
* = *.md,