[metadata]
name = dcomex-tools
version = 0.0.1
author = Giles Tetteh
author_email = giles.tetteh@tum.de
description = Python Tools for the DCoMEX project
url = https://github.com/giesekow/dcomex-tools.git
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
keywords =
  dcomex
  image processing
  meshing
  vtk
  itk

[options]
packages = 
  dcomex
  dcomex.lib
install_requires =
  numpy==1.24.2
  nibabel==5.2.1
  scipy==1.10.0
  matplotlib==3.7.0
  tinydb==4.7.1
  pyqtgraph==0.13.1
  numpy-stl==3.0.0
  pyopengl==3.1.6
  PyYAML==6.0
  gitpython==3.1.31

[options.entry_points]
console_scripts =
  dcomex = dcomex:main

[options.package_data]
* = *.md,